# arrow

cpp/examples/lib-external/: CMakeLists.txt
cpp/examples/lib-external/encode/: CMakeLists.txt
cpp/examples/lib-external/encode/src/: encode.cpp
cpp/examples/lib-external/read/inc/: read.h
cpp/examples/minimal_build/: CMakeLists.txt  docker-compose.yml  example.cxx  exec-plan-acero.cpp  minimal.dockerfile  node_test.hpp  row_wise_conversion_example.cpp  run_static.sh
cpp/examples/minimal_build/lib-external/: CMakeLists.txt
cpp/examples/minimal_build/lib-external/encode/inc/: encode.h
cpp/examples/minimal_build/lib-external/re/: CMakeLists.txt
cpp/examples/minimal_build/lib-external/re/inc/: re.h
cpp/examples/minimal_build/lib-external/re/src/: re.cpp
cpp/examples/minimal_build/lib-external/read/: CMakeLists.txt
cpp/examples/minimal_build/lib-external/read/src/: read.cpp
cpp/examples/minimal_build/lib-required/: stm.cpp  stm.h
cpp/src/arrow/: type.h
